components/openbao/patch-delete-helm-test-pod.yaml
$patch: delete
apiVersion: v1
kind: Pod
metadata:
  name: openbao-server-test
  #namespace: openbao
