components/openbao/gateway-api.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: openbao-gateway
spec:
  gatewayClassName: cilium
  listeners:
  - name: https-2
    protocol: HTTPS
    port: 443
    hostname: "openbao.irminsul"
    tls:
      certificateRefs:
      - kind: Secret
        group: ''
        name: openbao-tls-cert
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openbao
spec:
  parentRefs:
  - name: openbao-gateway
    group: gateway.networking.k8s.io	
    kind: Gateway
  hostnames:
  - "openbao.irminsul"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: openbao
      port: 8200
      group: ''	
      kind: Service
      weight: 1
